# Skeyd

./: CMakeLists.txt  README.md  events.cpp  events.h  eventsworker.h  exception.cpp  exception.h  keyboardwidget.cpp  keyboardwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  skeydmanager.cpp  skeydmanager.h
profiles/: Gaming.txt  Programming.txt
